updated index and css

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
     <title>weatherApp</title>
 </head>
 <body>
-    <script src='js/main.js'></script>    
-    Enter Temperature: <input type="number" id="temp">
+    <script src='js/main.js'></script> 
+    <div class='container'>
+       Enter Temperature: <input type="number" id="temp">
         <input type="submit" value="Submit" onclick="displayMessage()">
 
 <p id="dresscode"></p>
+
+</div>
+
 </body>
 </html>
