--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
         </main>
         
       </div>
+<h2>Weather conditions</h2>
+    <p>
+    sunny
+          <img src='images/sunny.jpg' alt='summer'>
+
+    windy 
+        <img src='images/windy.jpg' alt='wind', height='130'>
+     </p>
       <script src="js/weather.js"></script>
       <script src="js/main.js"></script>
 
