--- a/index.html
+++ b/index.html
@@ -49,10 +49,19 @@
     <p>
     sunny
           <img src='images/sunny.jpg' alt='summer'>
-
+    </p>
+    <p>
     windy 
-        <img src='images/windy.jpg' alt='wind', height='100'>
+        <img src='images/windy.jpg' alt='wind' height='150'>
      </p>
+     <p>
+    rainy
+        <img src='images/rainy.jpg' alt='winter'>
+     </p>
+    <p>
+    snowy
+        <img src='images/snow.jpg' alt='snow'>
+    </p>
       <script src="js/weather.js"></script>
       <script src="js/main.js"></script>
 
