--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <input type="submit" value="Submit" onclick="displayUserOutput()">
             <p id="text"></p>
        </div>
+       <!-- Added the api -->
        <div class="container">
         <header class="header">
           <div class="search">
@@ -45,6 +46,7 @@
         </main>
         
       </div>
+      <!-- insert images -->
 <h2>Weather conditions</h2>
     <p>
     sunny
@@ -64,6 +66,7 @@
     </p>
       <script src="js/weather.js"></script>
       <script src="js/main.js"></script>
-
+      <!-- my footer -->
+<footer >webpage created by Lilitha </footer>
 </body>
 </html>
