updated all files

--- a/index.html
+++ b/index.html
@@ -47,23 +47,24 @@
         
       </div>
       <!-- insert images -->
-<h2>Weather conditions</h2>
-    <p>
+<h2>Different weather conditions</h2>
+<hr>
+  <p>
     sunny
           <img src='images/sunny.jpg' alt='summer'>
-    </p>
-    <p>
+  </p>
+  <p>
     windy 
         <img src='images/windy.jpg' alt='wind' height='150'>
-     </p>
-     <p>
+  </p>
+  <p>
     rainy
         <img src='images/rainy.jpg' alt='winter'>
-     </p>
-    <p>
+  </p>
+  <p>
     snowy
         <img src='images/snow.jpg' alt='snow'>
-    </p>
+  </p>
       <script src="js/weather.js"></script>
       <script src="js/main.js"></script>
       <!-- my footer -->
